--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Signing #
+signing.properties
+
+# Auto generated files #
+/.gradle
+/build
+/.idea
+/buildSrc/.gradle
+/buildSrc/build
+/buildSrc/.idea
